--- a/chat-app/public/chat.html
+++ b/chat-app/public/chat.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/index.css">
-  <title>ChatCord App</title>
+  <title>Chat App</title>
 </head>
 <body>
   <div class="chat-container">
     <header class="chat-header">
-      <h1><i class="fas fa-smile"></i> ChatCord</h1>
+      <h1><i class="fas fa-smile"></i> Chat App</h1>
       <a href="index.html" class="btn">Leave Room</a>
     </header>
     <main class="chat-main">
@@ -35,7 +35,7 @@
 						</p>
 					</div>
 					<div class="message">
-						<p class="meta">Ra, <span>9:15pm</span></p>
+						<p class="meta">Ram <span>9:15pm</span></p>
 						<p class="text">
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
 							repudiandae.
@@ -57,6 +57,7 @@
     </div>
   </div>
 
+  <script src="/socket.io/socket.io.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
