--- a/chat-app/public/chat.html
+++ b/chat-app/public/chat.html
@@ -13,6 +13,7 @@
       <h1><i class="fas fa-smile"></i> Chat App</h1>
       <a href="index.html" class="btn">Leave Room</a>
     </header>
+
     <main class="chat-main">
       <div class="chat-sidebar">
         <h3><i class="fas fa-comments"></i> Room Name:</h3>
@@ -26,23 +27,9 @@
           <li>Mike</li>
         </ul>
       </div>
-      <div class="chat-messages">
-					<div class="message">
-						<p class="meta">Bharath <span>9:12pm</span></p>
-						<p class="text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-							repudiandae.
-						</p>
-					</div>
-					<div class="message">
-						<p class="meta">Ram <span>9:15pm</span></p>
-						<p class="text">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-							repudiandae.
-						</p>
-					</div>
-      </div>
+      <div class="chat-messages"> </div>
     </main>
+    
     <div class="chat-form-container">
       <form id="chat-form">
         <input
