Add a feature to grab the username & chatroom name entered by user at the entry point.
Use a node library called qs(querystring) to grab username & chatroom name. Pass it on to server by creating a new event called 'joinRoom'

--- a/chat-app/public/chat.html
+++ b/chat-app/public/chat.html
@@ -43,6 +43,9 @@
       </form>
     </div>
   </div>
+  
+  <!-- CDN for `qs` - a library to grab details in query string that you get as a result of GET-based FORM submission in index.html-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.0.2/qs.min.js" integrity="sha512-vEcvE9jXIY+RV8p1CJ5X5leefu4jjGnnCH0+PBsQx1mbpf1ZL/QVXW4biL012wLbCk26FIuATBNS+U6Npzy2lQ==" crossorigin="anonymous"></script>
 
   <script src="/socket.io/socket.io.js"></script> <!-- gives us access to the front end library-->
 
