--- a/chat-app/public/index.html
+++ b/chat-app/public/index.html
@@ -27,13 +27,7 @@
 				<form action="chat.html">
 					<div class="form-control">
 						<label for="username">Username</label>
-						<input
-							type="text"
-							name="username"
-							id="username"
-							placeholder="Enter username..."
-							required
-						/>
+						<input type="text" name="username" id="username" placeholder="Enter username..." required/>
 					</div>
 					<div class="form-control">
 						<label for="room">Room</label>
