Add Github Repo Hyperlink in landing page

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 						<li> This is a Socket.io based (web sockets) live chat website. </li> <br>
 						<li> Users can join particular room of their liking and chat with other users who are online in the same room. </li> <br>
 						<li> Note that once you leave a chat-room, all the details of chat will no longer be available to you. </li> <br>
-						<li> More information can be found at my Github Page</li>
+						<li> More information can be found at my <a href="https://github.com/IamGroot19/Portfolio_Projects/tree/chat_app_v1_deploy">Github Page </a></li>
 					</ul>
 				</h5>
 			</div>
